Updated to use req.params
